[tool.poetry]
name = "pyhton-mysql-docker"
version = "0.1.0"
description = ""
authors = ["adam <adam.sidorovich@setoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.0"
uvicorn = "^0.30.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
